[package]
name = "sync-wait-object"
authors = ["Ruxo Zheng <me@ruxoz.net>"]
version = "0.2.0"
edition = "2021"

description = "Synchronous Wait Object (abstraction over Mutex & CondVar)"
license = "MIT"
readme = "README.md"
homepage = "https://docs.rs/sync-wait-object"
documentation = "https://docs.rs/sync-wait-object"
repository = "https://github.com/ruxo/sync-wait-object"
keywords = ["native", "sync", "wait-object"]
categories = ["concurrency", "os::windows-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_WindowsProgramming"
]